# ConfigurationBenchmark

./: CMakeLists.txt  README.md  example-bench-script.sh  example-bench-suite.json  example-monitoring.json  example-parameters.json
cmake/: ConfigurationBenchmarkDependencies.cmake  FindConfiguration.cmake  FindMonitoring.cmake
src/: Benchmark.cxx  Dummy.cxx  example-inventory.cfg
